# ros2

./: LICENSE  README.md  main.py  pyproject.toml
Chapter2/: CMakeLists.txt  firstnode.cpp  firstnode.py
Chapter2/demo_cpp/: CMakeLists.txt
Chapter2/demo_cpp/install/: local_setup.sh  setup.sh
Chapter2/demo_cpp/install/demo_cpp/share/demo_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Chapter2/demo_cpp/install/demo_cpp/share/demo_cpp/cmake/: demo_cppConfig.cmake
Chapter2/ws/demo_cpp/: package.xml
Chapter2/ws/demo_cpp/src/: cpp_demo.cpp
Chapter2/ws/demo_python/: package.xml  setup.cfg  setup.py
Chapter2/ws/demo_python/demo_python/: python_demo.py
Chapter3/ws/demo_cpp/: .clangd  CMakeLists.txt  compile_commands.json  package.xml
Chapter3/ws/demo_cpp/src/: turtle_cycle.cpp  turtle_target.cpp
Chapter3/ws/novel_python_node/: package.xml  setup.cfg  setup.py
Chapter3/ws/novel_python_node/novel_python_node/: novel_python_node.py  read.py
Chapter3/ws/status_cpp/: CMakeLists.txt  package.xml
Chapter3/ws/status_cpp/src/: status_publisher.cpp
Chapter3/ws/status_interface/: package.xml
Chapter3/ws/status_interface/msg/: SystemStatus.msg
Chapter3/ws/status_publisher/: package.xml  setup.py
Chapter3/ws/status_publisher/status_publisher/: main.py
Chapter3/ws/target_py/: package.xml  setup.cfg  setup.py
Chapter3/ws/target_py/target_py/: main.py
