[project]
name = "ros2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colcon-common-extensions>=0.3.0",
    "espeakng>=1.0.3",
    "lark>=1.3.1",
    "numpy>=2.4.4",
    "requests>=2.34.0",
    "empy  ==3.3.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tsinghua"
default = true

[tool.ty.environment]
extra-paths = [
    "/opt/ros/jazzy/lib/python3.12/site-packages",
    "/home/iehtian/ros2/Chapter3/ws/install/status_interface/lib/python3.12/site-packages",
]
